<resources>
    <string name="app_name">线上公卫</string>
    <string name="tnb">2型糖尿病</string>
    <string name="gxy">高血压</string>
    <string name="data">居民档案</string>
    <string name="start">开始随访</string>
    <string name="list">患者名单</string>
    <string name="jktj">健康体检</string>
    <string name="phonenumber">手机号</string>
    <string name="passwd">密码</string>
    <string name="login">登录</string>
    <string name="regeist">注册</string>
    <string name="submit">添加</string>
    <string name="idcard">身份证号</string>
    <string name="sex">性别</string>
    <string name="id">用户名</string>
    <string name="name">姓名</string>
    <string name="address">住址</string>
    <string name="diseas">疾病</string>
</resources>
